<!--
  ~ This file is part of StyleBI.
  ~ Copyright (C) 2024  InetSoft Technology
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.inetsoft.stylebi</groupId>
    <artifactId>inetsoft-stylebi</artifactId>
    <version>1.0.0-beta-2</version>
  </parent>

  <artifactId>inetsoft-server</artifactId>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    <inetsoft.storage.type>mapdb</inetsoft.storage.type>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-core</artifactId>
      <version>${project.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-web</artifactId>
      <version>${project.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-xml-formats</artifactId>
      <version>${project.version}</version>
      <classifier>shaded</classifier>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-ssl-helpers</artifactId>
      <version>${project.version}</version>
      <classifier>shaded</classifier>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-storage-mapdb</artifactId>
      <version>${project.version}</version>
      <classifier>shaded</classifier>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-cassandra</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-datagov</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-googledoc</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-hive</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-aerospike</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-mongodb</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-odata</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-onedrive</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-orientdb</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-r</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-rest</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-serverfile</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>inetsoft-sharepoint-online</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-access</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-derby</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-h2</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-mysql</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-oracle</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-postgresql</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-snowflake</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi.connectors</groupId>
      <artifactId>jdbc-sqlserver</artifactId>
      <version>${project.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.inetsoft.stylebi</groupId>
      <artifactId>inetsoft-core</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
      <classifier>tests</classifier>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <useIncrementalCompilation>false</useIncrementalCompilation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifestSections>
              <manifestSection>
                <name>inetsoft/web/</name>
                <manifestEntries>
                  <Specification-Title>InetSoft Server Classes</Specification-Title>
                  <Specification-Version>${project.version}</Specification-Version>
                  <Specification-Vendor>InetsoftTechnology</Specification-Vendor>
                  <Implementation-Title>inetsoft.server</Implementation-Title>
                  <Implementation-Version>${maven.build.timestamp}</Implementation-Version>
                  <Implementation-Vendor>InetSoft Technology</Implementation-Vendor>
                </manifestEntries>
              </manifestSection>
            </manifestSections>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
        <executions>
          <execution>
            <id>process-aot</id>
            <goals>
              <goal>process-aot</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <workingDirectory>${project.build.directory}/server</workingDirectory>
          <mainClass>inetsoft.web.InetsoftApplication</mainClass>
          <arguments>
            <argument>--sree.home=${project.build.directory}/server/config</argument>
            <argument>--server.servlet.context-path=/sree</argument>
            <argument>--spring.resources.chain.strategy.content.enabled=false</argument>
          </arguments>
          <systemPropertyVariables>
            <java.awt.headless>true</java.awt.headless>
            <java.io.tmpdir>${project.build.directory}/server/temp</java.io.tmpdir>
            <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
            <inetsoftClusterDir>${project.build.directory}/server/cluster</inetsoftClusterDir>
            <spring.aot.enabled>true</spring.aot.enabled>
          </systemPropertyVariables>
          <jvmArguments>
            -server -Xmx2g -Xmx2g -XX:ReservedCodeCacheSize=100m -XX:+UseCodeCacheFlushing
            -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC
            -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
            --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
            --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
            --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
            --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.net=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.math=ALL-UNNAMED
            --add-opens=java.sql/java.sql=ALL-UNNAMED
            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
            --add-opens=java.base/java.time=ALL-UNNAMED
            --add-opens=java.base/java.text=ALL-UNNAMED
            --add-opens=java.management/sun.management=ALL-UNNAMED
          </jvmArguments>
          <additionalClasspathElements>
            <element>${basedir}/../core/target/classes</element>
            <element>${basedir}/../web/target/generated-resources/gulp</element>
            <element>${basedir}/../web/target/generated-resources/ng</element>
            <element>${basedir}/src/test/config/orders.jar</element>
          </additionalClasspathElements>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <excludedGroups>integration,slow</excludedGroups>
          <workingDirectory>${project.build.directory}/test-workdir</workingDirectory>
          <argLine>-Xmx2g --add-opens=java.base/jdk.internal.access=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.management/sun.management=ALL-UNNAMED</argLine>
          <systemPropertyVariables>
            <disable.updateAssetDependencies>true</disable.updateAssetDependencies>
            <kryo.unsafe>false</kryo.unsafe>
            <show.license.exception>true</show.license.exception>
            <inetsoft.sree.internal.cluster.implementation>inetsoft.test.TestCluster</inetsoft.sree.internal.cluster.implementation>
          </systemPropertyVariables>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>development</id>
      <activation>
        <property>
          <name>env.CI</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.inetsoft.stylebi.build</groupId>
            <artifactId>inetsoft-runner-maven-plugin</artifactId>
            <version>${project.version}</version>
            <executions>
              <execution>
                <id>configure-server</id>
                <phase>generate-test-resources</phase>
                <goals>
                  <goal>configure</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <configFile>${basedir}/src/test/config/${inetsoft.storage.type}/inetsoft.yaml</configFile>
              <backupFile>${basedir}/src/test/config/storage.zip</backupFile>
              <configDirectory>${project.build.directory}/server/config</configDirectory>
              <properties>
                <log.level.org.apache.ignite>WARN</log.level.org.apache.ignite>
                <security.login.orgLocation>domain</security.login.orgLocation>
              </properties>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>awsStorage</id>
      <properties>
        <inetsoft.storage.type>aws</inetsoft.storage.type>
      </properties>
    </profile>
    <profile>
      <id>googleStorage</id>
      <properties>
        <inetsoft.storage.type>google</inetsoft.storage.type>
      </properties>
    </profile>
    <profile>
      <id>mongoStorage</id>
      <properties>
        <inetsoft.storage.type>mongo</inetsoft.storage.type>
      </properties>
    </profile>
    <profile>
      <id>azureStorage</id>
      <properties>
        <inetsoft.storage.type>azure</inetsoft.storage.type>
      </properties>
    </profile>
    <profile>
      <id>sbom</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.cyclonedx</groupId>
            <artifactId>cyclonedx-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>makeBom</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>io.github.pmckeown</groupId>
            <artifactId>dependency-track-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>deploy</phase>
                <goals>
                  <goal>upload-bom</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
